--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "chart.js": "^4.4.7",
     "react-chartjs-2": "^5.3.0"
+  },
+  "engines": {
+    "node": ">=20.18.0"
   }
 }
