--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,5 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
-annotated-types==0.7.0
-anyio==4.8.0
-api==0.0.7
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-contourpy==1.3.0
-cycler==0.12.1
-exceptiongroup==1.2.2
-fastapi==0.115.7
-fonttools==4.55.1
-future @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
-h11==0.14.0
-idna==3.10
-importlib_resources==6.4.5
-iniconfig==2.0.0
 kiwisolver==1.4.7
-macholib @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+macholib==1.15.2
 matplotlib==3.9.3
 nose==1.3.7
 numpy==2.0.2
@@ -32,7 +15,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
-six @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+six==1.15.0
 sniffio==1.3.1
 starlette==0.45.3
 tomli==2.2.1
@@ -42,3 +25,20 @@ urllib3==2.3.0
 uvicorn==0.34.0
 vboxapi==1.0
 zipp==3.21.0
+altgraph==0.17.2
+annotated-types==0.7.0
+anyio==4.8.0
+api==0.0.7
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+contourpy==1.3.0
+cycler==0.12.1
+exceptiongroup==1.2.2
+fastapi==0.115.7
+fonttools==4.55.1
+future==0.18.2
+h11==0.14.0
+idna==3.10
+importlib_resources==6.4.5
+iniconfig==2.0.0
